--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "dualspeaker",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "vercel": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "commit": "git pull && bun update && bun run vercel && read -p 'Descriptions Commit: ' message && git add . && echo -n \"$message - \" && node getTime.js | xargs -I {} git commit -m \"$message - {}\" && git push"
-  },
-  "dependencies": {
-    "firebase": "^11.8.1",
-    "next": "15.3.2",
-    "next-pwa": "^5.6.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "styled-components": "^6.1.18"
-  },
-  "devDependencies": {
-    "typescript": "^5.8.3",
-    "@types/node": "^20.17.50",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5"
-  }
+	"name": "dualspeaker",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev --turbopack",
+		"vercel": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"create:mylint": "bunx --bun biome init && bun mylint",
+		"mylint": "bunx biome format --write",
+		"commit": "git pull && bun run vercel && bun mylint && read -p 'Descriptions Commit: ' message && git add . && echo -n \"$message - \" && node getTime.js | xargs -I {} git commit -m \"$message - {}\" && git push"
+	},
+	"dependencies": {
+		"firebase": "^11.8.1",
+		"next": "15.3.2",
+		"next-pwa": "^5.6.0",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"styled-components": "^6.1.18"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "^2.1.1",
+		"@types/node": "^20.17.50",
+		"@types/react": "^19.1.5",
+		"@types/react-dom": "^19.1.5",
+		"typescript": "^5.8.3"
+	}
 }
